--- a/css/style.css
+++ b/css/style.css
@@ -1736,9 +1736,17 @@ h2.heading_section::before {
     width: 100%;
     margin-left: 0;
 }
-
-
 }
+button {
+        background-color: #000;
+        border: .5px solid crimson;
+        border-radius: 10px;
+        color: #fff;
+        padding: 8px;
+        box-shadow: 0 0 30px 0 crimson,
+                    0 0 30px 0 crimson,
+                    0 0 10px 0 crimson inset;
+      }
 
 
 
